# iragent

./: .gitignore  README.md  agent_8py.html  annotated.html  app.ipynb  classes.html  classiragent_1_1agent_1_1Agent-members.html  classiragent_1_1agent_1_1Agent.html  classiragent_1_1agent_1_1AgentFactory-members.html  classiragent_1_1agent_1_1AgentFactory.html  classiragent_1_1agent_1_1UserAgent-members.html  classiragent_1_1agent_1_1UserAgent.html  classiragent_1_1memory_1_1BaseMemory-members.html  classiragent_1_1memory_1_1BaseMemory.html  classiragent_1_1memory_1_1SummarizerMemory-members.html  classiragent_1_1memory_1_1SummarizerMemory.html  classiragent_1_1message_1_1Message-members.html  classiragent_1_1message_1_1Message.html  classiragent_1_1message_1_1_message-members.html  classiragent_1_1message_1_1_message.html  classiragent_1_1models_1_1AgentManager-members.html  classiragent_1_1models_1_1AgentManager.html  classiragent_1_1models_1_1AutoAgentManager-members.html  classiragent_1_1models_1_1AutoAgentManager.html  classiragent_1_1models_1_1InternetAgent-members.html  classiragent_1_1models_1_1InternetAgent.html  classiragent_1_1models_1_1KnowledgeGraphBuilder-members.html  classiragent_1_1models_1_1KnowledgeGraphBuilder.html  classiragent_1_1models_1_1SimpleAgenticRAG-members.html  classiragent_1_1models_1_1SimpleAgenticRAG.html  classiragent_1_1models_1_1SimpleSequentialAgents-members.html  classiragent_1_1models_1_1SimpleSequentialAgents.html  classiragent_1_1models_1_1SmartAgentBuilder-members.html  classiragent_1_1models_1_1SmartAgentBuilder.html  (+46 more)
(+204 files in other folders)
