[project]
name = "iragent"
version = "0.1.0"
description = "A simple multi-agent framework"
authors = [{ name = "Parsa Bakhtiari", email = "spacenavard1@gmail.com" }]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "openai",
    "unittest"
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"